[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portshield"
version = "0.1.0"
description = "A lightweight CLI tool that monitors open ports in real-time on Linux."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
portshield = "portshield.main:main"

[project.urls]
"Homepage" = "https://github.com/Dacraezy1/portshield"
"Bug Tracker" = "https://github.com/Dacraezy1/portshield/issues"
